# mixed-criticality-graph-xp

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  ROADMAP.md  apply-clang-format.sh  docker-make.sh  docker.sh  install-venv-macos.sh  install-venv.sh  requirements.txt  run-campaign.sh  venv-docker.sh
.docker/: build-run.sh  entrypoint.sh  env.dockerfile  exitpoint.sh  mcgraph_container.py  rootless.dockerfile
campaigns/: campaign_test.py  configure.sh  dependency-paths.txt  pyproject.toml  requirements.txt  run-campaign.sh
campaigns/benchmarks/: __init__.py
mcsexplorer/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  edf_safe.cpp  evaluation.cpp  one_system.cpp
mcsexplorer/include/: EdfInterference.h  Graph.h  Job.h  SafeOracle.h  Scheduler.h  State.h  Types.h  UnsafeOracle.h
mcsexplorer/include/simulators/: EDFSimulator.h
mcsexplorer/src/: Graph.cpp  Job.cpp  SafeOracle.cpp  Scheduler.cpp  State.cpp  UnsafeOracle.cpp  util.cpp
mcsexplorer/src/oracles/safe/: edf_carryoverjobs.cpp
mcsexplorer/src/simulators/: EDFSimulator.cpp
mcsexplorer/tests/: test_simulators.cpp
notebooks/: charts-rtss.ipynb  make_compress_table.ipynb  plot_oracle.ipynb  plot_scheduling.ipynb  plot_statespace.ipynb  plot_statespace_finale.ipynb  plot_statespace_utilisation.ipynb  util.py
parallelruns/: parallel_simulator.py
src/cpp/: CMakeLists.txt  Graph.cpp  Graph.h  Job.cpp  Job.h  SafeOracle.cpp  SafeOracle.h  Scheduler.cpp  Scheduler.h  State.cpp  State.h  UnsafeOracle.cpp  UnsafeOracle.h  edf_safe.cpp  evaluation.cpp  main.cpp
src/cpp/include/: EdfInterference.h  Graph.h
src/cpp/src/: Job.cpp
src/py/: EDFVD.py  SetGenerator.py  TaskSet.py  experiment.py  experiment_complexity.py  requirements.txt
src/py/notebooks/: plot_statespace.ipynb
src/py/sufficientCond/: EDFVD.py
tasksetgen/: EDFVD.py  SetGenerator.py  Task.py  TaskSet.py  experiment.py  set_generator.py
